# zero2prod-python

./: .pre-commit-config.yaml  pyproject.toml
api/: app.py
api/schema/: types.py
tests/: conftest.py  test_api.py
